kustomizations/storage/reactive-resume/cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactive-resume-valkey
  labels:
    app: reactive-resume-valkey
    app.kubernetes.io/name: reactive-resume-valkey
    app.kubernetes.io/part-of: reactive-resume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactive-resume-valkey
      app.kubernetes.io/name: reactive-resume-valkey
  template:
    metadata:
      labels:
        app: reactive-resume-valkey
        app.kubernetes.io/name: reactive-resume-valkey
        app.kubernetes.io/part-of: reactive-resume
    spec:
      containers:
      - name: valkey
        image: valkey/valkey:latest
        args:
          - "--save"
          - ""
          - "--appendonly"
          - "no"
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 50m
            memory: 128Mi
