kustomizations/storage/reactive-resume/database-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: reactive-resume-postgresql
spec:
  serviceName: reactive-resume-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: reactive-resume-postgresql
      app.kubernetes.io/name: reactive-resume-postgresql
  template:
    metadata:
      labels:
        app: reactive-resume-postgresql
        app.kubernetes.io/name: reactive-resume-postgresql
    spec:
      containers:
      - name: postgres
        image: postgres:18
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: reactive-resume-postgresql-storage
          mountPath: /var/lib/postgresql
        livenessProbe:
          exec:
            command: [ "pg_isready", "-U", "reactive-resume" ]
          initialDelaySeconds: 20
          periodSeconds: 30
          failureThreshold: 3
        readinessProbe:
          exec:
            command: [ "pg_isready", "-U", "reactive-resume" ]
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            cpu: 5m
            memory: 64Mi
      nodeSelector:
        kubernetes.io/hostname: catuai
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      volumes:
      - name: reactive-resume-postgresql-storage
        persistentVolumeClaim:
          claimName: reactive-resume-postgresql-pvc
