kustomizations/storage/reactive-resume/cache-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-resume-valkey
  labels:
    app: reactive-resume-valkey
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app.kubernetes.io/name: reactive-resume-valkey
  type: ClusterIP
