kustomizations/storage/reactive-resume/server-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: reactive-resume
spec:
  selector:
    app: reactive-resume
  ports:
  - name: webui
    port: 3000
    targetPort: 3000
