kustomizations/storage/reactive-resume/server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactive-resume
  namespace: storage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
  - host: resume.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reactive-resume
            port:
              number: 3000
